gcc/testsuite/rust/rustc/ui/feature-gates/feature-gate-no_sanitize.rs
#[no_sanitize(address)]
// { dg-error ".E0658." "" { target *-*-* } .-1 }
fn main() {
}

